# chname

./: .gitignore  README.md  pyproject.toml
src/chname/: __main__.py
src/nameflux/: __main__.py
src/nomix/: __main__.py
tests/: test__main__.py
