[project]
name = "chname"
version = "2.1.6"
description = "Renames files in powerful ways"
authors = [
    {name = "Steve Scholnick",email = "scholnicks@gmail.com"}
]
readme = "README.md"
license="MIT"
license-files=["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "docopt-ng (>=0.9.0,<0.10.0)"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]
keywords = ["rename", "file", "batch", "bulk", "utility", "command-line", "cli"]

[project.urls]
homepage="https://pypi.org/project/chname/"
repository="https://github.com/scholnicks/chname/"
Issues = "https://github.com/scholnicks/chname/issues"

[tool.poetry]
packages = [{include = "chname", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chname = "chname.__main__:main"
