[project]
name = "chname"
version = "3.0.8"
description = "Renames files in powerful ways"
authors = [{ name = "Steve Scholnick", email = "scholnicks@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "rename",
    "file",
    "batch",
    "bulk",
    "utility",
    "command-line",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = ["docopt-ng (>=0.9.0,<0.10.0)"]

[project.urls]
homepage = "https://pypi.org/project/chname/"
repository = "https://github.com/scholnicks/chname/"
Issues = "https://github.com/scholnicks/chname/issues"

[project.scripts]
chname = "chname.__main__:main"

[tool.hatch.build.targets.sdist]
include = ["src/chname"]

[tool.hatch.build.targets.wheel]
include = ["src/chname"]

[tool.hatch.build.targets.wheel.sources]
"src/chname" = "chname"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
